// ktlint-disable filename
package com.brennaswitzer.nestpicker.data.models // ktlint-disable filename

enum class DataType {
    INTEGER,
    STRING
}
