@startuml
Area *-- Facet
Facet *-- DataType

class Area {
    Int id
    String name
    List<Facet> facets
}

class AreaAggregate implements Area {
    Int id
    String name
    List<Area> areas
}

class Facet extends Projection {
    Int id,
    String name,
    DataType dataType,
    Scorer scorer,
}

class FacetAggregate implements Facet {
    Int id,
    String name
    List<Facet> facets
}

enum DataType {
 INTEGER,
 STRING
}

interface Projection {
   rightNow()
   inTenYears()
   inFiftyYears()
}

interface Scorer {
    accepts() : Boolean
    createScore() : Int
}

class NumberScorer implements Scorer {
  Int data
  accepts()
  createScore()
}

class RangeScorer implements Scorer {
  Int high
  Int low
  accepts()
  createScore()
}

class RankScore implements Scorer {
 Int rank
 accepts()
 createScore()
}

@enduml
